# zijn

./: .env  .gitignore  Cargo.toml  Taskfile.yml  docker-compose.yaml
auth/: Cargo.toml  Taskfile.yml  diesel.toml
auth/migrations/2025-04-01-143927_create_users/: up.sql
auth/migrations/2025-04-01-171553_active_sessions/: up.sql
auth/src/: auth.rs  main.rs  schema.rs  session.rs  tests.rs  user.rs
cert/keycloak/: server.crt  server.key
cert/server/: cert.pem  key.pem
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/keycloak_admin_api/: Cargo.toml
crates/keycloak_admin_api/src/: lib.rs  req.rs  res.rs
crates/server/: Cargo.toml
crates/server/src/: chatdb.rs  main.rs  middleware.rs
self_signed_certs/: cert.pem  key.pem
services/: DockerfileAuthServer  docker-compose-auth.yaml  docker-compose-server.yaml
xtask/: Cargo.toml
xtask/src/: main.rs  realms.rs
