[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv.workspace = true
actix-web.workspace = true
env_logger.workspace = true

serde.workspace = true
serde_json.workspace = true

hyper.workspace = true
hyper-rustls.workspace = true
rustls-pemfile.workspace = true
rustls.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

chrono.workspace = true

diesel.workspace = true
diesel_derives.workspace = true 
uuid.workspace = true

[dev-dependencies]
actix-rt = "2.5.0"
actix-http = "3.0.0"

[lints]
workspace = true
