[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
hyper = { version = "1.6.0", features = ["http2"] }
hyper-rustls = "0.27.5"
rustls-pemfile = "2"
rustls = "0.23.25"

dotenv.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
