[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# MongoDB is our go-to NoSQL for storing chat history
mongodb = "3.2.3"

dotenv.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger.workspace = true

actix-web.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
rustls-pemfile.workspace = true
rustls.workspace = true
keycloak.workspace = true
futures-util.workspace = true
uuid.workspace = true
chrono.workspace = true
